_rendered/apps/smb-driver/apps-daemonset-smb-driver-csi-smb-node-win.yaml
# Source: smb-driver/charts/csi-driver-smb/templates/csi-smb-node-windows-hostprocess.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: csi-smb-node-win
  namespace: smb-driver
  labels:
    app.kubernetes.io/instance: "smb-driver"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "csi-driver-smb"
    app.kubernetes.io/version: "1.20.3"
    helm.sh/chart: "csi-driver-smb-1.20.3"
spec:
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: csi-smb-node-win
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: "smb-driver"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/name: "csi-driver-smb"
        app.kubernetes.io/version: "1.20.3"
        helm.sh/chart: "csi-driver-smb-1.20.3"
        app: csi-smb-node-win
    spec:
      tolerations:
        - effect: NoSchedule
          key: node.kubernetes.io/os
          operator: Exists
      nodeSelector:
        kubernetes.io/os: windows
      priorityClassName: "system-cluster-critical"
      serviceAccountName: csi-smb-node-sa      
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        windowsOptions:
          hostProcess: true
          runAsUserName: "NT AUTHORITY\\SYSTEM"
      hostNetwork: true
      containers:
        - name: node-driver-registrar
          image: "registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.17.0"
          command:
            - "csi-node-driver-registrar.exe"
          args:
            - "--csi-address=$(CSI_ENDPOINT)"
            - "--kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)"
            - "--plugin-registration-path=$(PLUGIN_REG_DIR)"
            - "--v=2"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 150Mi
            requests:
              cpu: 10m
              memory: 40Mi
          securityContext:
            capabilities:
              drop:
              - ALL
        - name: smb
          image: "registry.k8s.io/sig-storage/smbplugin:v1.20.3-windows-hp"
          imagePullPolicy: IfNotPresent
          command:
            - "smbplugin.exe"
          args:
            - "--v=5"
            - "--drivername=smb.csi.k8s.io"
            - --endpoint=$(CSI_ENDPOINT)
            - --nodeid=$(KUBE_NODE_NAME)
            - "--enable-get-volume-stats=true"
            - "--remove-smb-mapping-during-unmount=true"
            - "--enable-windows-host-process=true"
          resources:
            limits:
              memory: 600Mi
            requests:
              cpu: 10m
              memory: 40Mi
          securityContext:
            capabilities:
              drop:
              - ALL
